# tray-test

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.c  menu.json  tray.h  tray_linux.c
.github/workflows/: release.yaml
